--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,10 @@
 }
 
 body {
-  background-color: var(--very-dark-blue);
+  background-image: url(wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(22, 22, 24);
   text-align: center;
   color: var(--white);
 }
